--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ header a{
 
 .container li{
     margin-left: 20px;
-    margin-top: 5px;
+    margin-top: 5px;    
 }
 
 .view{
@@ -287,29 +287,41 @@ header a{
     margin-top: 50px;
 }
 
-#habilidades .skills .Hcontainer{
-    display: flex;
-    flex-direction: column;
-    background-color: transparent;
-    background-image: none;    
-    border: 1px solid;
-    border-color:#18bc9c ;
-    border-radius: 15px;
-    padding: 20px;
-    width: 30%;
+.containerH{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 2.5rem;
+    justify-content: center;
+    align-items: center;
 }
 
-#habilidades .skills .Hcontainer h2{
-    color:#18bc9c;
-    font-size: 1.5rem;
+.containerH .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    background-color: rgba(149, 205, 207, 0.541);    
+    border-radius: 10px;
+    padding: 15px;
+    border-color: #18bc9c;
 }
-    
-#habilidades .skills .Hcontainer li{
-    font-size: 1.2rem;
-    margin-left: 30px;
-    margin-top: 13px;
-    font-weight: bold;
+
+.box img{
+    height: 150px;
+    width: 150px;
 }
+
+.box:hover{
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+
 
 /*-------------------- CONTATO ----------------------*/
 
@@ -482,4 +494,14 @@ footer{
     #contato a{
         font-size: 1.4rem;
     }    
+    .containerH{
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2rem;                
+    }     
+    
+    .box img{
+        height: 100px;
+        width: 100px;
+    }
+
 }
